--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video Background Website With Parallax</title>
+  <title>Video Background Website with Parallax</title>
 
   <!-- Font-Awesome -->
   <script src="https://use.fontawesome.com/abfd61aebe.js"></script>
@@ -46,8 +46,8 @@
 <section id="banner">
   <div class="inner">
     <h1>Sleek UI/UX</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur<br>
-       adipisicing elit. Repudiandae omnis quo facilis illo! Perspiciatis, ut.</p>
+    <p>Lorem ipsum dolor sit amet consectetur<br>
+       adipisicing elit. Tempore minima cumque perspiciatis dicta quisquam animi.</p>
   </div>
   <!-- video must include 'muted' for autoplay to work in Chrome browser -->
   <video autoplay loop muted src="./images/banner.mp4"></video>
